man/vzctl: introduce sub-sub-sections
Those were previously done using .TP which is wrong.

This patch introduces macro .SS3 which tries to do a sub-sub-section
(similar to .SS -- subsection).

Also, Makefile and html2wiki.sh were modified appropriately to format

	.SS3 Heading

for wiki as

	==== Heading ====

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -77,7 +77,8 @@ manual.ps: toc.man $(man_MANS)
 pdfs: manual.pdf $(PDFS)
 
 %.8.wiki: %.8 html2wiki.sh
-	sed 's/^\.SS\(.*$$\)/.in 0\n=== \1 ===/' $< | \
+	sed 's/^\.SS \(.*$$\)/.in 0\n=== \1 ===/' $< | \
+	sed 's/^\.SS3 \(.*$$\)/.in 0\n==== \1 ====/' | \
 	$(GROFF) $(GROFF_HTML_OPTS) | \
 		MANS="$(man_MANS)" $(srcdir)/html2wiki.sh > $@
 	rm -f grohtml-*.png
