Added setver.sh, a script to set vzctl version from git
This one can be used for building vzctl from GIT, with the proper
version set in vzctl sources and spec file. This is good for:

1. people building vzctl from git
2. nightly builds (?)

version.h is needed for vzctl to be rebuilt when version string
changes.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -138,6 +138,7 @@ AC_CONFIG_FILES([bin/Makefile
                  etc/network-scripts/Makefile
                  etc/udev/Makefile
                  etc/Makefile
+                 include/version.h
                  man/Makefile
                  scripts/Makefile
                  src/lib/Makefile
