init.d/vzeventd-redhat: fix warning message
Apparently print_warning only accepts $1 as an argument, not $*,
so the second part of the message was not printed:

Checking vzevent kernel module ...                         [FAILED]
vzevent module should be loaded with                       [WARNING]

Fix it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vzeventd-redhat.in
+++ b/etc/init.d/vzeventd-redhat.in
@@ -42,8 +42,7 @@ check() {
 	fi
 	if ! cat $param | fgrep -qw 1; then
 		print_failure
-		print_warning "vzevent module should be loaded with " \
-				"reboot_event=1 parameter"
+		print_warning "vzevent module should be loaded with reboot_event=1 parameter"
 		echo
 		return 1
 	fi
