vzifup-post: do not fail if there's no /proc/vz/veip
In some situations (some of OpenVZ modules are loaded, some are not)
we can have this:

  # vzifup-post eth0
  awk: cmd. line:1: fatal: cannot open file `/proc/vz/veip' for reading (No such file or directory)

Fix it by changing a check for /proc/vz/veinfo to /proc/vz/veip.
Naturally, we don't care about veinfo, and we should not do anything
if veip is not here.

http://bugzilla.openvz.org/1918

Reported-by: Slava Dubrovskiy <dubrsl@altlinux.org>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzifup-post.in
+++ b/bin/vzifup-post.in
@@ -1,9 +1,9 @@
 #!/bin/bash
-# Copyright (C) 2008-2010, Parallels, Inc. All rights reserved.
+# Copyright (C) 2008-2011, Parallels, Inc. All rights reserved.
 #
 # Update ARP table for all containers on interface up
 
-[ ! -f /proc/vz/veinfo ] && exit 0
+[ ! -f /proc/vz/veip ] && exit 0
 
 usage()
 {
