scripts/vps-net_add.in: fix VE_STATE description
When running this script, VE_STATE can either be 'starting' or
'running'. State 'stopping' only makes sense for vps-net_del script.

Fix a minor whitespace issue while at it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-net_add.in
+++ b/scripts/vps-net_add.in
@@ -23,9 +23,9 @@
 #   VEID	- container ID
 # Optional parameters:
 #   IP_ADDR	- IP address(es) to add
-#                   (several addresses should be divided by space)
+#		  (several addresses should be divided by space)
 #   VE_STATE	- state of CT; could be one of:
-#		  starting | stopping | running
+#		  starting | running
 
 . @PKGCONFDIR@/vz.conf
 . @PKGLIBDIR@/scripts/vps-functions
