scripts/vps-*: support for IPs with netmasks
Now when vzctl supports venet IPs with netmasks (commit f018af5fa
and others), we need to strip those masks from IP_ADDR list
before dealing with it.

http://bugzilla.openvz.org/1088

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -183,9 +183,10 @@ vzarpipdetect()
 	local errwarn
 	[ "$ERROR_ON_ARPFAIL" = 'yes' ] && errwarn=vzerror || errwarn=vzwarning
 
-	local dev ip
+	local dev ipm ip
 
-	for ip in $1; do
+	for ipm in $1; do
+		ip=${ipm%%/*}
 		for dev in $(vz_get_neighbour_devs "$ip"); do
 			${ARPSEND_CMD} -D -e "$ip" "$dev" ||
 				$errwarn "$ARPSEND_CMD -D -e $ip $dev FAILED" 1
