--- a/scripts/vps-net_add.in
+++ b/scripts/vps-net_add.in
@@ -37,16 +37,17 @@ vzcheckvar VEID
 vzgetnetdev
 
 vzarpipdetect "$IP_ADDR"
-for IP in $IP_ADDR; do
-	vzarp add "$IP"
-	vzaddrouting "$IP"
-done
-# Save ip address information
+
 mkdir -p "$VE_STATE_DIR" >/dev/null 2>&1
 if [ "$VE_STATE" = 'starting' ]; then
-	echo -n "$IP_ADDR " > "$VE_STATE_DIR/$VEID"
-elif [ "$VE_STATE" = 'running' ]; then
-	echo -n "$IP_ADDR " >> "$VE_STATE_DIR/$VEID"
+	echo -n > "$VE_STATE_DIR/$VEID"
 fi
+
+for IPM in $IP_ADDR; do
+	IP=${IPM%%/*}
+	vzarp add "$IP"
+	vzaddrouting "$IP"
+	echo -n "$IP " >> "$VE_STATE_DIR/$VEID"
+done
 
 exit 0
