bin/vzubc: fix for Debian/mawk
Debian systems use mawk not gawk by default. Apparently, mawk lacks
strtonum() function. We could just truncate the last character (which is ':'),
but let's be lazy and use int() function which appears to be portable.

Reported-by: Mario Kleinsasser <mario.kleinsasser@gmail.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -266,7 +266,7 @@ BEGIN {
 }
 /^[[:space:]]*[0-9]+:/ {
 	header=""
-	bcid=strtonum($1)
+	bcid=int($1)
 	if ((CTIDS !~ /^[ ]*$/) && (CTIDS !~ " " bcid " ")) {
 		skip=1
 		next
