bin/vzubc: fix -i/-r modes for 0th beancounter
Problem:
 # ./vzubc -i -c -r -q 0
 Error: can not use relative/incremental modes: BCID is unknown

Cause: commit 50c173f4871e

Solution: fix check for bcid to be less than zero, initialize bcid
to -1 at BEGIN.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzubc.in
+++ b/bin/vzubc.in
@@ -248,6 +248,7 @@ BEGIN {
 	if (qmaxheld > qheld)
 		qmaxheld=qheld
 	prepare_header()
+	bcid=-1
 }
 /^Version: / {
 	if ($2 != "2.5") {
@@ -291,7 +292,7 @@ BEGIN {
 	failcnt=$6
 }
 ((id!="") && (!skip)) {
-	if ((bcid <= 0) && (rel || inc)) {
+	if ((bcid < 0) && (rel || inc)) {
 		print "Error: can not use relative/incremental" \
 			" modes: BCID is unknown" > "/dev/stderr"
 		exit 1
