etc/init.d/vzeventd-gentoo.in: fix service stop
vzeventd does not create pid file. Drop its mentioning from init script
to fix /etc/init.d/vzeventd stop.

http://bugzilla.openvz.org/1980
https://bugs.gentoo.org/show_bug.cgi?id=382213

--- a/etc/init.d/vzeventd-gentoo.in
+++ b/etc/init.d/vzeventd-gentoo.in
@@ -42,7 +42,6 @@ start() {
 
 	ebegin "Starting vzeventd"
 	start-stop-daemon --start --exec ${VZEVENTD} \
-		--pidfile /var/run/vzeventd.pid \
 		-- ${VZEVENTD_OPTS}
 	eend $?
 }
@@ -50,7 +49,6 @@ start() {
 stop() {
 	check_config || return
 	ebegin "Stopping vzeventd"
-	start-stop-daemon --stop --exec ${VZEVENTD} \
-		--pidfile /var/run/vzeventd.pid
+	start-stop-daemon --stop --exec ${VZEVENTD}
 	eend $?
 }
