etc/vz.conf: fix a typo in a comment
APR -> ARP

Reported-by: Thorsten Schifferdecker <curx@openvz.org>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -21,7 +21,7 @@ VZFASTBOOT=no
 # By default automatically assigned.
 #VE_ROUTE_SRC_DEV="eth0"
 
-# Controls which interfaces to send ARP requests and modify APR tables on.
+# Controls which interfaces to send ARP requests and modify ARP tables on.
 NEIGHBOUR_DEVS=detect
 
 ## Fail if there is another machine in the network with the same IP
