etc/conf/ve-vswap-1g.conf-sample: added as alias to 1024m
Just an alias, so you can say --config vswap-1g instead of vswap-1024m

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/conf/Makefile.am
+++ b/etc/conf/Makefile.am
@@ -24,7 +24,8 @@ VECONFIG  = \
 	    ve-unlimited.conf-sample \
 	    ve-vswap-256m.conf-sample \
 	    ve-vswap-512m.conf-sample \
-	    ve-vswap-1024m.conf-sample
+	    ve-vswap-1024m.conf-sample \
+	    ve-vswap-1g.conf-sample
 
 vpsconf_DATA = \
 	$(VE0CONFIG) \
