etc/conf: add vswap configs for 2GB and 4GB RAM
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/conf/Makefile.am
+++ b/etc/conf/Makefile.am
@@ -25,7 +25,9 @@ VECONFIG  = \
 	    ve-vswap-256m.conf-sample \
 	    ve-vswap-512m.conf-sample \
 	    ve-vswap-1024m.conf-sample \
-	    ve-vswap-1g.conf-sample
+	    ve-vswap-1g.conf-sample \
+	    ve-vswap-2g.conf-sample \
+	    ve-vswap-4g.conf-sample
 
 vpsconf_DATA = \
 	$(VE0CONFIG) \
