vzmigrate: use --sparse on the first rsync
vzmigrate is expanding sparse files inside the migrated container.

This patch adds the --sparse option to the first rsync in vzmigrate,
yo help with sparse files during a migration.

Tested by:

1) Creating a sparse file in the container:
	# dd if=/dev/zero of=sparse seek=1000000 count=1
	# du -hs sparse
	12K     sparse

2) Migrating the container:
	# vzmigrate -r no --keep-dst -v host2 CTID

And with this patch, sparse files are not expanded, as expected.

http://bugzilla.openvz.org/2002

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -448,7 +448,7 @@ else
 fi
 
 log 1 "Syncing private"
-$RSYNC "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"
+$RSYNC --sparse "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"
 # Ignore rsync error 24 "Partial transfer due to vanished source files"
 if [ $? != 24 ] && [ $? != 0 ]; then
 	log 0 "Failed to sync container private areas"
