--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -64,7 +64,7 @@ if [ "${MODULES_DISABLED}" != "yes" ]; then
 		MODULES="${MODULES} vzwdog"
 	fi
 	test -z "$IPTABLES_MODULES" && IPTABLES_MODULES="$IPTABLES"
-	IPT_MODULES="ip_tables ${IPTABLES} xt_tcpudp"
+	IPT_MODULES="ip_tables ${IPTABLES_MODULES} xt_tcpudp"
 	if [ "${IPV6}" = "yes" ]; then
 		IPT_MODULES="${IPT_MODULES} ${IP6TABLES}"
 	fi
