vzctl create: add ability to auto-download template cache
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -19,6 +19,7 @@ include $(top_srcdir)/pathsubst.am
 
 vzlib_SCRIPTS = \
 	vps-create \
+	vps-download \
 	vps-functions \
 	vps-net_add \
 	vps-net_del \
