scripts/vps-download: error message goes to stderr
In the meantime, fix double space after the comma.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-download.in
+++ b/scripts/vps-download.in
@@ -57,8 +57,8 @@ download()
 			src=${prefix}/${tmpl}.${suffix}
 			dst=$TCACHEDIR/${tmpl}.${suffix}
 			if test -f $dst; then
-				echo "File $dst is already present, " \
-					"not overwriting."
+				echo "File $dst is already present," \
+					"not overwriting." 1>&2
 				exit 2
 			fi
 			# Check if the file is there
