--- a/scripts/vps-download.in
+++ b/scripts/vps-download.in
@@ -52,6 +52,8 @@ download()
 {
 	local prefix suffix src dst
 	local tmpl=$1
+	local ret
+
 	for prefix in $TEMPLATE_REPOS; do
 		for suffix in $TMPL_SUFFIXES; do
 			src=${prefix}/${tmpl}.${suffix}
@@ -63,7 +65,11 @@ download()
 			fi
 			# Check if the file is there
 			if wget -q --spider -P $TCACHEDIR ${src}; then
-				if wget -P $TCACHEDIR ${src}; then
+				trap "rm -f ${dst}" SIGINT SIGTERM
+				wget -P $TCACHEDIR ${src}
+				ret=$?
+				trap - SIGINT SIGTERM
+				if test $ret -eq 0; then
 					echo "Success!"
 					exit 0
 				else
