--- a/scripts/vps-download.in
+++ b/scripts/vps-download.in
@@ -31,19 +31,19 @@
 # Wget is required for this script to function
 wget -V >/dev/null || exit 4
 
+. @PKGLIBDIR@/scripts/vps-functions
+. @PKGCONFDIR@/vz.conf
+
 # Prefix to template cache repository URL
-TMPL_REPO_PREFIX="http://download.openvz.org/template/precreated"
+: ${TMPL_REPO_PREFIX="http://download.openvz.org/template/precreated"}
 # What directories to use
-TEMPLATE_REPOS="${TMPL_REPO_PREFIX}/"
+: ${TEMPLATE_REPOS="${TMPL_REPO_PREFIX}"}
 # Uncomment this to enable 'beta' (new) templates
 #TEMPLATE_REPOS="${TEMPLATE_REPOS} ${TMPL_REPO_PREFIX}/beta/"
 # Uncomment this to enable 'unsupported' (old) templates
 #TEMPLATE_REPOS="${TEMPLATE_REPOS} ${TMPL_REPO_PREFIX}/unsupported"
 
-TMPL_SUFFIXES="tar.gz"
-
-. @PKGLIBDIR@/scripts/vps-functions
-. @PKGCONFDIR@/vz.conf
+: ${TMPL_SUFFIXES="tar.gz"}
 
 vzcheckvar TEMPLATE
 TCACHEDIR=$TEMPLATE/cache
