scripts/vps-download: a fix for dash
Commit 0756f94515f4739e42a13eaaab5fb78f7aa4d0e3 added trap around wget.
It looks like dash do not understand SIGXXX names, only XXX. Fix it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-download.in
+++ b/scripts/vps-download.in
@@ -100,10 +100,10 @@ download()
 			fi
 			# Check if the file is there
 			if wget -q --spider -P $TCACHEDIR ${src}; then
-				trap "rm -f ${dst}" SIGINT SIGTERM
+				trap "rm -f ${dst}" INT TERM
 				wget -P $TCACHEDIR ${src}
 				ret=$?
-				trap - SIGINT SIGTERM
+				trap - INT TERM
 				if test $ret -eq 0; then
 					echo "Downloaded succesfully."
 					if ! check_sig $src $dst; then
