scripts/vps-download: add config file
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -27,7 +27,7 @@ SUBDIRS = \
 	network-scripts \
 	udev
 
-pkgconf_DATA = vz.conf osrelease.conf
+pkgconf_DATA = vz.conf osrelease.conf download.conf
 
 EXTRA_DIST = $(pkgconf_DATA)
 
