vps-download: fix CHECK_TEMPLATE_SIG check
It's just a typo, which unfortunately renders gpg_working() unusable.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>
(cherry picked from commit bb8c1ed92cfd3787a738e89cf39dcccb2d681488)

--- a/scripts/vps-download.in
+++ b/scripts/vps-download.in
@@ -81,7 +81,7 @@ Arguments:
 
 gpg_working()
 {
-	test "x$CHECK_TEMPLATE_SIG" != "yes" && return 0
+	test "x$CHECK_TEMPLATE_SIG" != "xyes" && return 0
 
 	# Check if gpg is installed
 	if ! gpg --version >/dev/null; then
