--- a/scripts/vps-download.in
+++ b/scripts/vps-download.in
@@ -42,7 +42,7 @@ wget -V >/dev/null || exit 4
 
 . @PKGLIBDIR@/scripts/vps-functions
 . @PKGCONFDIR@/vz.conf
-test -r @PKGCONFDIR@/download.conf && source @PKGCONFDIR@/download.conf
+test -r @PKGCONFDIR@/download.conf && . @PKGCONFDIR@/download.conf
 
 # Prefix to template cache repository URL
 : ${TMPL_REPO_PREFIX="http://download.openvz.org/template/precreated"}
