vzctl create: show tarball extraction progress using pv
If pv tool is available, make use of it to show a nice progress bar,
like this:

Creating container private area (fedora-15-x86)
44.5MB 0:00:09 [4.96MB/s] [======>                            ] 21% ETA 0:00:32

Isn't it cute? ;)

While at it, simplify error message (and get rid of 'error' because it
is already printed by vzerror).

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-create.in
+++ b/scripts/vps-create.in
@@ -74,9 +74,12 @@ create_prvt()
 
 	[ "$AVAIL" -ge "$NEEDED" ] ||
 		vzerror "Insufficient disk space in $VE_PRVT; available: $AVAIL, needed: $NEEDED" ${VZ_FS_NO_DISK_SPACE}
+	CAT=cat
+	# Use pv to show nice progress bar if we can
+	pv -V >/dev/null 2>&1 && CAT=pv
 	chmod 700 "$VE_PRVT"
-	tar -C "$VE_PRVT" ${TAR_OPT} ${OPT} -xf "$PRIVATE_TEMPLATE" ||
-		vzerror "Error in tar ${TAR_OPT} ${OPT} -xf $PRIVATE_TEMPLATE" ${VZ_FS_NEW_VE_PRVT}
+	$CAT "$PRIVATE_TEMPLATE" | tar -C "$VE_PRVT" ${TAR_OPT} ${OPT} -x ||
+		vzerror "Unpack $PRIVATE_TEMPLATE failed" ${VZ_FS_NEW_VE_PRVT}
 	chmod 755 "$VE_PRVT"
 }
 
