etc/init.d/vz: Stricter auto-replacement of CONFIGFILE
Commits 39bdf8e, c5995be, 75678d added a feature to switch CONFIGFILE
from default (basic) to vswap-enabled one, if CONFIGFILE was not touched
(i.e. same as in shipped configuration file).

Apparently this was bugging some customers who want to use
CONFIGFILE="basic".

To solve this, add a comment to config file, and include that comment
into check.

Now, in order for this autoreplacement to not work, remove that comment.

http://bugzilla.openvz.org/2169

Reported-by: Pavel Odintsov <pavel.odintsov@gmail.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -170,7 +170,7 @@ modify_vzconf()
 
 	egrep -q 'test|stab' /proc/vz/version 2>/dev/null || return 0
 
-	local cfg_old='^CONFIGFILE="basic"$'
+	local cfg_old='^CONFIGFILE="basic" # Use vswap-256m on RHEL6 kernel$'
 	local cfg_new='CONFIGFILE="vswap-256m"'
 	local kv=$(cat /proc/vz/version | sed 's/\(test\|stab\).*$//')
 	if test $kv -ge 42; then
