--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -33,7 +33,7 @@ TEMPLATE=/vz/template
 ## Defaults for containers
 VE_ROOT=/vz/root/$VEID
 VE_PRIVATE=/vz/private/$VEID
-CONFIGFILE="basic"
+CONFIGFILE="basic" # Use vswap-256m on RHEL6 kernel
 DEF_OSTEMPLATE="centos-5"
 
 ## Load vzwdog module
