etc/init.d/vz*: fix for "we are in container"
Commit b8746d72 added a functionality to check that we are not inside
container before trying to stop vz. The problem is bogus "We are inside CT"
message if VZ was never started (like running /etc/init.d/vz restart
on a fresh system.

Additional check for /proc/user_beancounters readability should fix it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -304,10 +304,12 @@ stop() {
 	check_config || return
 
 	# Avoid stop action inside a CT, check we are in CT0
-	if ! egrep -q '^[[:space:]]*0:[[:space:]]' \
-			/proc/user_beancounters; then
-		eerror "Looks like we are inside a container!"
-		return 1
+	if test -r /proc/user_beancounters; then
+		if ! egrep -q '^[[:space:]]*0:[[:space:]]' \
+				/proc/user_beancounters; then
+			eerror "Looks like we are inside a container!"
+			return 1
+		fi
 	fi
 
 	local mod
