--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -457,11 +457,13 @@ stop()
 	local mod
 
 	# Avoid stop action inside a CT, check we are in CT0
-	if ! egrep -q '^[[:space:]]*0:[[:space:]]' \
+	if test -r /proc/user_beancounters; then
+		if ! egrep -q '^[[:space:]]*0:[[:space:]]' \
 			/proc/user_beancounters; then
-		print_failure "Looks like we are inside a container!"
-		RETVAL=1
-		return 1
+			print_failure "Looks like we are inside a container!"
+			RETVAL=1
+			return 1
+		fi
 	fi
 
 	if ! lockfile $LOCKFILE; then
