ploop: Introduce ploop image support routines
Yet to be used.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -49,6 +49,7 @@ vzcfgvalidate_SOURCES = validate.c \
 vzcfgvalidate_LDADD   = $(VZCTL_LIBS)
 
 vzctl_SOURCES = enter.c \
+                image.c \
                 modules.c \
                 vzctl-actions.c \
                 vzctl.c
