--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -52,7 +52,7 @@ vzctl_SOURCES = enter.c \
                 modules.c \
                 vzctl-actions.c \
                 vzctl.c
-vzctl_LDADD = $(VZCTL_LIBS) $(DL_LIBS) $(UTIL_LIBS)
+vzctl_LDADD = $(VZCTL_LIBS) $(DL_LIBS) $(UTIL_LIBS) $(PLOOP_LIBS)
 
 vzlist_SOURCES = vzlist.c
 vzlist_LDADD   = $(VZCTL_LIBS)
