ploop: etc/init.d/vz-*: load/unload ploop modules
They are only available in latest RHEL6-based kernel, but since we are
ignoring modprobe errors it's fine to try loading/unloading these modules
even if there are no modules. In other words, there could be kernel version
checks added but from my perspective it's OK to go without it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -27,6 +27,7 @@ check_config() {
 		: ${MODULES:="vzmon vzdquota vzdev"}
 		: ${MIGRATE_MODULES:="vzcpt vzrst"}
 		: ${NET_MODULES="vznetdev vznet vzethdev"}
+		: ${PLOOP_MODULES="ploop pfmt_ploop1 pfmt_raw pio_direct pio_nfs"}
 
 		# check if you should load vzwdog module
 		[ "${VZWDOG}" = "yes" ] && MODULES="${MODULES} vzwdog"
@@ -280,7 +281,7 @@ start() {
 		fi
 	done
 
-	for mod in ${MIGRATE_MODULES}; do
+	for mod in ${MIGRATE_MODULES} ${PLOOP_MODULES}; do
 		/sbin/modprobe ${mod} >/dev/null 2>&1
 	done
 	eend
@@ -318,7 +319,7 @@ stop() {
 	umount_cgroups
 	stop_net
 
-	for mod in ${MIGRATE_MODULES}; do
+	for mod in ${MIGRATE_MODULES} ${PLOOP_MODULES}; do
 		/sbin/modprobe -r ${mod} > /dev/null 2>&1
 	done
 
