--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -56,7 +56,7 @@ _vzctl()
 	local vzctl_common_opts="--quiet --verbose --help --version"
 	local vzctl_cmds="create destroy delete mount umount chkpnt restore \
 		set start stop restart status quotaon quotaoff quotainit \
-		enter exec exec2 runscript convert"
+		enter exec exec2 runscript convert console"
 	local vzctl_create_opts="--ostemplate --config --private --root \
 		--ipadd --hostname --name --description"
 	local vzctl_set_opts="--save --onboot --root --private \
