ploop: introduce VE_LAYOUT / --layout
Now one can choose whether to put a new CT on ploop or use old simfs.

First, there is a global VE_LAYOUT parameter in vz.conf.
Second, there is a --layout option for vzctl create.
Default for now is simfs (might be changed in the future).

If ploop is requested, a check is performed if ploop is supported by the kernel.

Man pages and bash_completion modified accordingly.

(this is an implementation of TODO1 mentioned in commit 27cea49)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -58,7 +58,7 @@ _vzctl()
 		set start stop restart status quotaon quotaoff quotainit \
 		enter exec exec2 runscript convert console"
 	local vzctl_create_opts="--ostemplate --config --private --root \
-		--ipadd --hostname --name --description"
+		--layout --ipadd --hostname --name --description"
 	local vzctl_set_opts="--save --onboot --root --private \
 		--userpasswd --disabled --ipadd --ipdel \
 		--hostname --nameserver --searchdomain \
@@ -141,6 +141,9 @@ _vzctl()
 						    cut -d "-" -f 2- | sed -e 's#.conf-sample$##')
 
 				COMPREPLY=( $( compgen -W "$configs" -- $cur ) )
+				;;
+			--layout)
+				COMPREPLY=( $( compgen -W "ploop simfs" -- $cur ) )
 				;;
 			--iptables)
 				COMPREPLY=( $( compgen -W "$iptables_names" -- $cur ) )
