--- a/etc/vz.conf
+++ b/etc/vz.conf
@@ -35,6 +35,8 @@ VE_ROOT=/vz/root/$VEID
 VE_PRIVATE=/vz/private/$VEID
 CONFIGFILE="basic" # Use vswap-256m on RHEL6 kernel
 DEF_OSTEMPLATE="centos-5"
+## Filesystem layout for new CTs: either simfs (default) or ploop
+#VE_LAYOUT=ploop
 
 ## Load vzwdog module
 VZWDOG="no"
