man: add missing macros (.SY/.OP/.YS and .EX/.EE)
Apparently, even RHEL6 uses very old groff version (1.18) in which
all the above macros are not available, leading to ugly rendering of
say vzctl(8) man page. For example, SYNOPSYS for vzctl looks like this:

SYNOPSIS
       [flags]  create  CTID  [flags]  start  CTID  [flags]  stop CTID [flags]
       restart CTID [flags] chkpnt | restore [flags] set  CTID  [--ifname  dev
       [flags] destroy | delete | mount | umount | status | quotaon | quotaoff
       | quotainit | console | convert CTID [flags] exec | exec2 CTID  command
       [arg  ...]   [flags]  enter CTID [flags] runscript CTID script --help |
       --version

We want those macros since they make the pages look better, so to avoid
the above ugliness we can just add the macros into each and every man page.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -34,6 +34,7 @@ man_MANS = \
  vz.conf.5 \
  ctid.conf.5
 
+SRCS=$(man_MANS:%=%.in)
 PSS=$(man_MANS:%=%.ps)
 PDFS=$(man_MANS:%=%.pdf)
 WIKIS=$(man_MANS:%=%.wiki)
@@ -43,7 +44,10 @@ PAPER=$(shell paperconf || echo letter)
 GROFF_OPTS=-Tps -t -dpaper=$(PAPER) -P-p$(PAPER) -man -msafer -rC1 -rD1 -rS11
 GROFF_HTML_OPTS=-Thtml -t -man -msafer
 
-EXTRA_DIST = $(man_MANS) toc.man.in toc.sh html2wiki.sh
+EXTRA_DIST = $(SRCS) toc.man.in toc.sh html2wiki.sh macros.tmac
+
+%: %.in macros.tmac
+	cat macros.tmac $< > $@
 
 check-man-dates:
 	for FILE in $(man_MANS); do \
@@ -97,4 +101,4 @@ wikis: $(WIKIS) toc.wiki
 .PHONY: wikis
 
 CLEANFILES=all.ps all.pdf toc.man toc.wiki \
-	   manual.ps manual.pdf $(PSS) $(PDFS) $(WIKIS)
+	   manual.ps manual.pdf $(PSS) $(PDFS) $(WIKIS) $(man_MANS)
